Thread-unsafe logging used #61765

Closed
opened 2019-02-20 21:40:11 +01:00 by Sergey Sharybin · 5 comments

System Information

Operating system: Linux Debian, 64bit, Buster
Graphics card: GTX1080

Blender Version
Broken: 2.8 master, ee7c9790a2
Worked: any revision prior 552b2287db

Short description of error

Spontaneous crashes caused by CLOG which is lazily initializing logger from multiple threads without any guards.

Exact steps for others to reproduce the error

Tricky to reproduce, but easy to see: a lot of CLOG() calls is happening from routines which are used in multiple threads. Most common to happen is the LOG_ERROR(&LOG, "invalid driver - %s[%d]", fcu->rna_path, fcu->array_index);.

I would expect logger to not be thread-unsafe, this is guaranteed by all other logging libraries. Otherwise it is cumbersome and dangerous to use.

Should either become thread-safe, or the lazy initialization is to be prohibited.

This is a stopper for the production here at the studio.

**System Information** Operating system: Linux Debian, 64bit, Buster Graphics card: GTX1080 **Blender Version** Broken: 2.8 master, ee7c9790a25 Worked: any revision prior 552b2287db **Short description of error** Spontaneous crashes caused by CLOG which is lazily initializing logger from multiple threads without any guards. **Exact steps for others to reproduce the error** Tricky to reproduce, but easy to see: a lot of `CLOG()` calls is happening from routines which are used in multiple threads. Most common to happen is the `LOG_ERROR(&LOG, "invalid driver - %s[%d]", fcu->rna_path, fcu->array_index);`. I would expect logger to not be thread-unsafe, this is guaranteed by all other logging libraries. Otherwise it is cumbersome and dangerous to use. Should either become thread-safe, or the lazy initialization is to be prohibited. This is a stopper for the production here at the studio.
Author
Owner

Added subscriber: @Sergey

Added subscriber: @Sergey
Campbell Barton was assigned by Sergey Sharybin 2019-02-20 21:40:54 +01:00
Author
Owner

Added subscribers: @fsiddi, @MilanJaros

Added subscribers: @fsiddi, @MilanJaros
Author
Owner

Added subscriber: @brecht

Added subscriber: @brecht

This issue was referenced by 94f83a4ebd

This issue was referenced by 94f83a4ebd929e7c4f405b1c78d9db842dfe1689

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#61765
No description provided.