Fix T61765: thread-unsafe logging used